--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -12,9 +12,9 @@ jobs:
     steps:
       - uses: actions/checkout@v3
       - name: Build the Docker image
-        run: docker build . --tag el3os/tg_remote_server
+        run: docker build ./app --tag el3os/tg_remote_server
       - name: Login to DockerHub
-        run: docker login -u el3os -p ${{ DOCKER_HUB_TOKEN }}
+        run: docker login -u el3os -p ${{ secrets.DOCKER_HUB_TOKEN }}
       - name: Push the Docker image
         run: docker push el3os/tg_remote_server
   
